--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -13,7 +13,7 @@
         // display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 40px 20px 20px 20px;
+        margin: 0px 20px 20px 20px;
         // justify-content: center;
         // justify-content:space-between;
         // padding: 40px 80px 30px;
@@ -22,6 +22,9 @@
         // .toggel {
         //     margin: 30px 0 32px 0;
         // }
+        .seperator {
+            display: none;
+        }
         .status_1 {
             max-width: 580px;
         }
@@ -100,13 +103,22 @@
     }
 }
 @media screen and (max-width: 576px) {
-    .left-side {
-        .status {
-            display: none !important;
+    .home_main {
+        // height: 80vh;
+        .left-side {
+            .seperator {
+                display: block;
+            }
+            .status {
+                display: none !important;
+            }
+            width: 100% !important;
+            margin: 23px 20px 20px 20px;
+            margin-bottom: 5rem;
+            // margin: unset !important;
         }
-        width: 100% !important;
-    }
-    .right-side {
-        display: none;
+        .right-side {
+            display: none;
+        }
     }
 }
