--- a/component/nestedComponent/dashBoard/dashboardIcons/icons.scss
+++ b/component/nestedComponent/dashBoard/dashboardIcons/icons.scss
@@ -71,3 +71,9 @@
         color: black;
     }
 }
+.profile {
+    img {
+        // border: 1px solid #f7f7f7;
+        border-radius: 8px;
+    }
+}
