--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -10,3 +10,4 @@
 @import "../../component/nestedComponent/dashBoard/top-bar";
 @import "../../component/nestedComponent/home/homeMobileStories";
 @import "../../component/nestedComponent/home/toggelmobile";
+@import "../../component/re-usabelComponent/scss";
