--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -11,9 +11,10 @@
         // height: 100vh;
         // left: 500px;
         // display: flex;
+        // max-height: 100vh;
         flex-direction: column;
         align-items: center;
-        margin: 0px 20px 20px 20px;
+        margin: 10px 20px 20px 20px;
         // justify-content: center;
         // justify-content:space-between;
         // padding: 40px 80px 30px;
@@ -104,7 +105,7 @@
 }
 @media screen and (max-width: 576px) {
     .home_main {
-        // height: 80vh;
+        height: calc(100vh - 108px) !important;
         .left-side {
             .seperator {
                 display: block;
@@ -113,9 +114,6 @@
                 display: none !important;
             }
             width: 100% !important;
-            margin: 23px 20px 20px 20px;
-            margin-bottom: 5rem;
-            // margin: unset !important;
         }
         .right-side {
             display: none;
