--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -5,7 +5,7 @@
 @import "../../component/nestedComponent/home/homeRequest";
 @import "../../component/nestedComponent/dashBoard/dashboardIcons/icons.scss";
 @import "../../component/home/index.scss";
-@import "../../component/setting.js";
+@import "../../component/setting";
 @import "../../component/nestedComponent/setting/accordion";
 @import "../../component/nestedComponent/dashBoard/top-bar";
 @import "../../component/nestedComponent/home/homeMobileStories";
