--- a/component/re-usabelComponent/setting/commonChangeText/index.scss
+++ b/component/re-usabelComponent/setting/commonChangeText/index.scss
@@ -7,13 +7,16 @@
         .text_one {
             font-weight: 500;
             font-size: 16px;
-            line-height: 24px;
+            // line-height: 24px;
         }
         .text_two {
             color: #bfbfbf;
         }
-        .change {
-            font-size: 16px;
-        }
+    }
+    .change {
+        font-size: 16px;
+    }
+    .seletedText {
+        color: #bfbfbf;
     }
 }
