--- a/component/re-usabelComponent/setting/commonSwitch/index.scss
+++ b/component/re-usabelComponent/setting/commonSwitch/index.scss
@@ -14,6 +14,9 @@
         .change {
             font-size: 16px;
         }
+        .ant-switch-checked {
+            background-color: #c39eff !important;
+        }
     }
     .colorfull_text {
         color: #c39eff;
