--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -25,6 +25,8 @@
         // }
         .seperator {
             display: none;
+            width: 100%;
+            border: 1px solid #ffe9eb;
         }
         .status_1 {
             max-width: 580px;
