--- a/component/nestedComponent/home/homeRequest/index.scss
+++ b/component/nestedComponent/home/homeRequest/index.scss
@@ -19,13 +19,17 @@
     .buttons {
         display: flex;
         justify-content: space-evenly;
+        .main_btn {
+            width: 45%;
+        }
         .accept-button {
             border: none;
             background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
             color: rgba(255, 255, 255, 1);
             border-radius: 8px;
-            max-width: 140px;
-            height: 36px;
+            width: 100%;
+            // max-width: 140px;
+            // height: 36px;
             font-size: 12px;
             font-weight: 600;
         }
@@ -34,8 +38,9 @@
             background: none;
             color: rgba(1, 0, 16, 1);
             border-radius: 8px;
-            max-width: 140px;
-            height: 36px;
+            width: 100%;
+            // max-width: 140px;
+            // height: 36px;
             font-size: 12px;
             font-weight: 600;
         }
